--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.1",
+    "node-fetch": "^2.7.0",
     "sequelize": "^6.33.0",
     "uuid": "^9.0.1"
   },
