--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-paginate": "^1.0.2",
     "express-validator": "^7.0.1",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
