--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.3",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
@@ -22,6 +23,7 @@
     "mysql2": "^3.6.1",
     "node-fetch": "^2.7.0",
     "sequelize": "^6.33.0",
+    "translatte": "^3.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
